Changed the hero section, navbar and the abckground

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,9 +18,12 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: #161616
-     
   ;
+}
+
+html, body, #__next {
+  height: 100%;
+  margin: 0;
 }
 
 @layer utilities {
